WIP - channel selector, styling

--- a/packages/ia-components/components/selectors/horizontal-radio-group/horizontal-radio-group.less
+++ b/packages/ia-components/components/selectors/horizontal-radio-group/horizontal-radio-group.less
@@ -51,11 +51,11 @@
     // the radio set should look like a button group
     // with only one "on" at a given time
     display: none;
-    + label {
-      > span {
-        opacity: 0.5;
-      }
-    }
+    // + label {
+    //   > span {
+    //     opacity: 0.5;
+    //   }
+    // }
     &:checked {
       + label {
         > span {
