--- a/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -151,22 +151,8 @@
       height: calc(@content-window-height-desktop - @jwp-height-w-waveform);
     }
 
-    // .media-section {
-    //   display: inline-block;
-    //   width: 51%;
-    // }
-
-    // .grid-right {
-    //   display: inline-block;
-    //   width: 47%;
-    // }
-
     padding-left: 1rem;
     padding-bottom: 1rem;
-
-    // .media-section {
-    //   margin: 1rem;
-    // }
 
     .playlist-section {
       padding-right: 1rem;
@@ -174,16 +160,15 @@
     }
   }
 
-  @media (min-width: @audio-player-desktop-min-width) and (max-width: @audio-player-desktop-max-width) {
-    
-    .channel-controls {
-      .channel-label {
-        display: none;
-      }
-    }
-
+  @media (min-width: @audio-player-desktop-min-width) {
     .playlist-section {
-      max-height: 90%;
+      max-height: 400px;
+    }
+  }
+
+  @media (min-width: @audio-player-desktop-min-width) and (max-width: @audio-player-desktop-max-width) {
+    .playlist-section {
+      max-height: 400px;
       overflow: auto;
 
       .pagination-arrow,
@@ -208,17 +193,8 @@
   }
 
   @media(min-width: @audio-player-widescreen-min-width) {
-    // .media-section {
-    //   margin: 0;
-    //   width: 40%;
-    // }
-    // .grid-right {
-    //   width: 58%;
-    //   margin-left: 1%;
-    // }
     .playlist-section {
       .flexbox-pagination {
-        height: calc(@content-window-height-desktop - 50px);
         float: unset;
 
         &.column {
@@ -249,40 +225,6 @@
       margin-right: 1rem;
       vertical-align: top;
       margin-top: .6rem;
-    }
-  }
-
-  .selector__radio-group {
-    width: inherit;
-
-    .option {
-      padding: 0.5rem 1rem 0;
-
-      label {
-        margin-bottom: 0;
-      }
-
-      .webamp-link {
-        &:hover {
-          text-decoration: none;
-        }
-        display: inline-block;
-        overflow: hidden;
-        color: #fff;
-        // opacity: 0.5;
-        img {
-          height: 2rem;
-        }
-        .channel-label {
-          margin-top: .1rem;
-        }
-
-        @media (max-width: @audio-player-mobile-max-width) {
-          text-align: center;
-          display: block;
-          width: 100%;
-        }
-      }
     }
   }
 }
